epoch removal script

--- a/ica_notebooks/m_00_02.ipynb
+++ b/ica_notebooks/m_00_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "abc290bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 15:44:05.432773\n"
+      "IMPORTED MODULES today: 2023-07-17 14:21:57.095043\n"
      ]
     }
    ],
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "061e20c2",
+   "execution_count": 6,
+   "id": "9c191592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8d5439c2",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -390,23 +390,7 @@
       "  [282] Keeping  (2023-04-06 14:31:13.314167+00:00 - 2023-04-06 14:31:13.314167+00:00 -> 606.937 - 606.937)\n",
       "  [283] Keeping  (2023-04-06 14:31:13.414167+00:00 - 2023-04-06 14:31:13.414167+00:00 -> 607.037 - 607.037)\n",
       "  [284] Keeping  (2023-04-06 14:31:14.664167+00:00 - 2023-04-06 14:31:14.664167+00:00 -> 608.287 - 608.287)\n",
-      "  [285] Keeping  (2023-04-06 14:31:16.164167+00:00 - 2023-04-06 14:31:16.164167+00:00 -> 609.787 - 609.787)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [285] Keeping  (2023-04-06 14:31:16.164167+00:00 - 2023-04-06 14:31:16.164167+00:00 -> 609.787 - 609.787)\n",
       "  [286] Keeping  (2023-04-06 14:31:19.464167+00:00 - 2023-04-06 14:31:19.464167+00:00 -> 613.087 - 613.087)\n",
       "  [287] Keeping  (2023-04-06 14:31:19.564167+00:00 - 2023-04-06 14:31:19.564167+00:00 -> 613.187 - 613.187)\n",
       "  [288] Keeping  (2023-04-06 14:31:21.165167+00:00 - 2023-04-06 14:31:21.165167+00:00 -> 614.788 - 614.788)\n",
@@ -520,7 +504,23 @@
       "  [396] Keeping  (2023-04-06 14:34:19.895167+00:00 - 2023-04-06 14:34:19.895167+00:00 -> 793.518 - 793.518)\n",
       "  [397] Keeping  (2023-04-06 14:34:23.516167+00:00 - 2023-04-06 14:34:23.516167+00:00 -> 797.139 - 797.139)\n",
       "  [398] Keeping  (2023-04-06 14:34:23.615167+00:00 - 2023-04-06 14:34:23.615167+00:00 -> 797.238 - 797.238)\n",
-      "  [399] Keeping  (2023-04-06 14:34:24.896167+00:00 - 2023-04-06 14:34:24.896167+00:00 -> 798.519 - 798.519)\n",
+      "  [399] Keeping  (2023-04-06 14:34:24.896167+00:00 - 2023-04-06 14:34:24.896167+00:00 -> 798.519 - 798.519)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [400] Keeping  (2023-04-06 14:34:26.395167+00:00 - 2023-04-06 14:34:26.395167+00:00 -> 800.018 - 800.018)\n",
       "  [401] Keeping  (2023-04-06 14:34:29.026167+00:00 - 2023-04-06 14:34:29.026167+00:00 -> 802.649 - 802.649)\n",
       "  [402] Keeping  (2023-04-06 14:34:29.126167+00:00 - 2023-04-06 14:34:29.126167+00:00 -> 802.749 - 802.749)\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "7fdf55d4",
    "metadata": {},
    "outputs": [
@@ -578,7 +578,7 @@
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.1s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.0s remaining:    0.0s\n"
      ]
     },
     {
@@ -598,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.8s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
      ]
     }
    ],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "dd900d04",
    "metadata": {
     "scrolled": true
@@ -681,7 +681,7 @@
      "text": [
       "Fitting ICA to data using 63 channels (please be patient, this may take a while)\n",
       "Selecting by number: 63 components\n",
-      "Fitting ICA took 32.7s.\n"
+      "Fitting ICA took 38.1s.\n"
      ]
     },
     {
@@ -720,7 +720,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 52 iterations on 675589 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,6 +730,30 @@
     "ica = ICA(n_components=len(filt_raw_a.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica.fit(filt_raw_a)\n",
     "ica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d47b631",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica.plot_components()"
    ]
   },
   {
@@ -793,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9644a510",
    "metadata": {},
    "outputs": [
@@ -801,7 +825,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 2, 1, 0]\n"
+      "[41, 53, 59, 21, 20, 0, 1, 2, 3, 8, 9, 11]\n"
      ]
     }
    ],
@@ -811,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fdd3ea51",
    "metadata": {},
    "outputs": [
@@ -821,8 +845,9 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 4 ICA components\n",
+      "    Zeroing out 12 ICA components\n",
       "    Projecting back using 63 PCA components\n",
+      "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
      ]
@@ -830,10 +855,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x34523bf40>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2d9585b40>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f9b0d9bd",
    "metadata": {},
    "outputs": [
@@ -868,9 +893,9 @@
      "output_type": "stream",
      "text": [
       "m_00_02_pos2a.vhdr\n",
-      "/Users/babe/src/gla/dissertation/go/cleaned/m_00_02\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_00_02\n",
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_00_02/m_00_02_pos2a.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_00_02/m_00_02_pos2a.vhdr\n"
      ]
     },
     {
@@ -904,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "7a7ebf86",
    "metadata": {},
    "outputs": [
@@ -912,7 +937,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_00_02\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_00_02\u001b[0m\n",
       "├── m_00_02_pos2a.eeg\n",
       "├── m_00_02_pos2a.vhdr\n",
       "└── m_00_02_pos2a.vmrk\n",
@@ -927,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7a874b32",
    "metadata": {},
    "outputs": [],
@@ -969,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -984,7 +1009,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -1301,7 +1326,23 @@
       "  [300] Keeping  (2023-04-06 15:34:18.788051+00:00 - 2023-04-06 15:34:18.788051+00:00 -> 605.0 - 605.0)\n",
       "  [301] Keeping  (2023-04-06 15:34:20.288051+00:00 - 2023-04-06 15:34:20.288051+00:00 -> 606.5 - 606.5)\n",
       "  [302] Keeping  (2023-04-06 15:34:22.988051+00:00 - 2023-04-06 15:34:22.988051+00:00 -> 609.2 - 609.2)\n",
-      "  [303] Keeping  (2023-04-06 15:34:23.088051+00:00 - 2023-04-06 15:34:23.088051+00:00 -> 609.3 - 609.3)\n",
+      "  [303] Keeping  (2023-04-06 15:34:23.088051+00:00 - 2023-04-06 15:34:23.088051+00:00 -> 609.3 - 609.3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [304] Keeping  (2023-04-06 15:34:25.288051+00:00 - 2023-04-06 15:34:25.288051+00:00 -> 611.5 - 611.5)\n",
       "  [305] Keeping  (2023-04-06 15:34:26.788051+00:00 - 2023-04-06 15:34:26.788051+00:00 -> 613.0 - 613.0)\n",
       "  [306] Keeping  (2023-04-06 15:34:29.558051+00:00 - 2023-04-06 15:34:29.558051+00:00 -> 615.77 - 615.77)\n",
@@ -1386,23 +1427,7 @@
       "  [385] Keeping  (2023-04-06 15:36:42.178051+00:00 - 2023-04-06 15:36:42.178051+00:00 -> 748.39 - 748.39)\n",
       "  [386] Keeping  (2023-04-06 15:36:42.279051+00:00 - 2023-04-06 15:36:42.279051+00:00 -> 748.491 - 748.491)\n",
       "  [387] Keeping  (2023-04-06 15:36:44.139051+00:00 - 2023-04-06 15:36:44.139051+00:00 -> 750.351 - 750.351)\n",
-      "  [388] Keeping  (2023-04-06 15:36:45.639051+00:00 - 2023-04-06 15:36:45.639051+00:00 -> 751.851 - 751.851)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [388] Keeping  (2023-04-06 15:36:45.639051+00:00 - 2023-04-06 15:36:45.639051+00:00 -> 751.851 - 751.851)\n",
       "  [389] Keeping  (2023-04-06 15:36:48.189051+00:00 - 2023-04-06 15:36:48.189051+00:00 -> 754.401 - 754.401)\n",
       "  [390] Keeping  (2023-04-06 15:36:48.289051+00:00 - 2023-04-06 15:36:48.289051+00:00 -> 754.501 - 754.501)\n",
       "  [391] Keeping  (2023-04-06 15:36:50.639051+00:00 - 2023-04-06 15:36:50.639051+00:00 -> 756.851 - 756.851)\n",
@@ -1440,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1518,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.8s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.6s finished\n"
      ]
     }
    ],
@@ -1563,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -1986,7 +2011,7 @@
       "  [409] Keeping  (2023-04-06 15:37:23.150051+00:00 - 2023-04-06 15:37:23.150051+00:00 -> 789.362 - 789.362)\n",
       "  [410] Keeping  (2023-04-06 15:37:25.174051+00:00 - 2023-04-06 15:37:25.174051+00:00 -> 791.386 - 791.386)\n",
       "Cropping complete (kept 411)\n",
-      "Fitting ICA took 77.1s.\n"
+      "Fitting ICA took 77.6s.\n"
      ]
     },
     {
@@ -2025,7 +2050,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 126 iterations on 679690 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2035,6 +2060,30 @@
     "ica_b = ICA(n_components=len(filt_raw_b.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0a6c6199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2092,17 +2141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 3, 4, 2]"
+       "[25, 26, 23, 21, 0, 1, 2, 3, 4, 9, 8, 17]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2123,7 +2172,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 5 ICA components\n",
+      "    Zeroing out 12 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2132,10 +2181,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x168a09990>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x29264dfc0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2161,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -2170,7 +2219,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_00_02/m_00_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_00_02/m_00_02_pos2b.vhdr\n"
      ]
     },
     {
@@ -2200,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -2208,7 +2257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_00_02\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_00_02\u001b[0m\n",
       "├── m_00_02_pos2a.eeg\n",
       "├── m_00_02_pos2a.vhdr\n",
       "├── m_00_02_pos2a.vmrk\n",
@@ -2234,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
