--- a/ica_notebooks/m_01_01.ipynb
+++ b/ica_notebooks/m_01_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "abc290bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 17:56:54.183986\n"
+      "IMPORTED MODULES today: 2023-07-17 14:27:15.304606\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "061e20c2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "8d5439c2",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -366,23 +366,7 @@
       "  [258] Keeping  (2023-04-13 14:43:45.045979+00:00 - 2023-04-13 14:43:45.045979+00:00 -> 456.006 - 456.006)\n",
       "  [259] Keeping  (2023-04-13 14:43:45.145979+00:00 - 2023-04-13 14:43:45.145979+00:00 -> 456.106 - 456.106)\n",
       "  [260] Keeping  (2023-04-13 14:43:46.915979+00:00 - 2023-04-13 14:43:46.915979+00:00 -> 457.876 - 457.876)\n",
-      "  [261] Keeping  (2023-04-13 14:43:48.415979+00:00 - 2023-04-13 14:43:48.415979+00:00 -> 459.376 - 459.376)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [261] Keeping  (2023-04-13 14:43:48.415979+00:00 - 2023-04-13 14:43:48.415979+00:00 -> 459.376 - 459.376)\n",
       "  [262] Keeping  (2023-04-13 14:43:52.165979+00:00 - 2023-04-13 14:43:52.165979+00:00 -> 463.126 - 463.126)\n",
       "  [263] Keeping  (2023-04-13 14:43:52.265979+00:00 - 2023-04-13 14:43:52.265979+00:00 -> 463.226 - 463.226)\n",
       "  [264] Keeping  (2023-04-13 14:43:53.415979+00:00 - 2023-04-13 14:43:53.415979+00:00 -> 464.376 - 464.376)\n",
@@ -536,6 +520,16 @@
       "  [412] Keeping  (2023-04-13 14:48:10.133979+00:00 - 2023-04-13 14:48:10.133979+00:00 -> 721.094 - 721.094)\n",
       "Cropping complete (kept 413)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
     }
    ],
    "source": [
@@ -545,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7fdf55d4",
    "metadata": {},
    "outputs": [
@@ -668,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "dd900d04",
    "metadata": {
     "scrolled": true
@@ -680,7 +674,7 @@
      "text": [
       "Fitting ICA to data using 63 channels (please be patient, this may take a while)\n",
       "Selecting by number: 63 components\n",
-      "Fitting ICA took 36.6s.\n"
+      "Fitting ICA took 40.9s.\n"
      ]
     },
     {
@@ -719,7 +713,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 64 iterations on 691052 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,6 +723,30 @@
     "ica = ICA(n_components=len(filt_raw_a.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica.fit(filt_raw_a)\n",
     "ica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "89ccbdec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica.plot_components()"
    ]
   },
   {
@@ -921,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "9644a510",
    "metadata": {},
    "outputs": [
@@ -929,7 +947,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2]\n"
+      "[29, 26, 21, 1, 0, 3, 4, 2, 7, 14, 15, 16]\n"
      ]
     }
    ],
@@ -939,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "fdd3ea51",
    "metadata": {},
    "outputs": [
@@ -949,7 +967,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 3 ICA components\n",
+      "    Zeroing out 12 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -958,10 +976,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2c19fd480>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2e6104820>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -987,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f9b0d9bd",
    "metadata": {},
    "outputs": [
@@ -996,9 +1014,10 @@
      "output_type": "stream",
      "text": [
       "m_01_01_pos1a.vhdr\n",
-      "/Users/babe/src/gla/dissertation/go/cleaned/m_01_01\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_01\n",
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_01_01/m_01_01_pos1a.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_01/m_01_01_pos1a.vhdr\n",
+      "Overwriting existing file.\n"
      ]
     },
     {
@@ -1027,12 +1046,12 @@
     "   os.makedirs(session_dir)\n",
     "\n",
     "print(\"\\n**** Saving file to: \", session_dir+'/'+file_name) \n",
-    "mne.export.export_raw(session_dir+'/'+file_name, reconstr_raw, verbose=1)"
+    "mne.export.export_raw(session_dir+'/'+file_name, reconstr_raw, verbose=1, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "7a7ebf86",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1059,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_01_01\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_01\u001b[0m\n",
       "├── m_01_01_pos1a.eeg\n",
       "├── m_01_01_pos1a.vhdr\n",
       "└── m_01_01_pos1a.vmrk\n",
@@ -1055,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "7a874b32",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -1091,7 +1110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -1508,23 +1527,7 @@
       "  [400] Keeping  (2023-04-13 15:48:29.738715+00:00 - 2023-04-13 15:48:29.738715+00:00 -> 713.19 - 713.19)\n",
       "  [401] Keeping  (2023-04-13 15:48:29.838715+00:00 - 2023-04-13 15:48:29.838715+00:00 -> 713.29 - 713.29)\n",
       "  [402] Keeping  (2023-04-13 15:48:31.148715+00:00 - 2023-04-13 15:48:31.148715+00:00 -> 714.6 - 714.6)\n",
-      "  [403] Keeping  (2023-04-13 15:48:32.648715+00:00 - 2023-04-13 15:48:32.648715+00:00 -> 716.1 - 716.1)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [403] Keeping  (2023-04-13 15:48:32.648715+00:00 - 2023-04-13 15:48:32.648715+00:00 -> 716.1 - 716.1)\n",
       "  [404] Keeping  (2023-04-13 15:48:35.448715+00:00 - 2023-04-13 15:48:35.448715+00:00 -> 718.9 - 718.9)\n",
       "  [405] Keeping  (2023-04-13 15:48:35.548715+00:00 - 2023-04-13 15:48:35.548715+00:00 -> 719.0 - 719.0)\n",
       "  [406] Keeping  (2023-04-13 15:48:37.648715+00:00 - 2023-04-13 15:48:37.648715+00:00 -> 721.1 - 721.1)\n",
@@ -1537,6 +1540,16 @@
       "  [413] Keeping  (2023-04-13 15:48:51.512715+00:00 - 2023-04-13 15:48:51.512715+00:00 -> 734.964 - 734.964)\n",
       "Cropping complete (kept 414)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
     }
    ],
    "source": [
@@ -1546,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1612,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.6s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
      ]
     }
    ],
@@ -1669,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2091,46 +2104,24 @@
       "  [408] Keeping  (2023-04-13 15:48:44.150715+00:00 - 2023-04-13 15:48:44.150715+00:00 -> 727.602 - 727.602)\n",
       "  [409] Keeping  (2023-04-13 15:48:47.745715+00:00 - 2023-04-13 15:48:47.745715+00:00 -> 731.197 - 731.197)\n",
       "Cropping complete (kept 410)\n",
-      "Fitting ICA took 250.0s.\n"
+      "Fitting ICA took 272.6s.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "sh: -c: line 0: unexpected EOF while looking for matching `''\n",
+      "sh: -c: line 1: syntax error: unexpected end of file\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<table class=\"table table-hover table-striped table-sm table-responsive small\">\n",
-       "    <tr>\n",
-       "        <th>Method</th>\n",
-       "        <td>fastica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Fit</th>\n",
-       "        <td>460 iterations on raw data (678572 samples)</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "    <tr>\n",
-       "        <th>ICA components</th>\n",
-       "        <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Available PCA components</th>\n",
-       "        <td>63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>Channel types</th>\n",
-       "        <td>eeg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <th>ICA components marked for exclusion</th>\n",
-       "        <td>&mdash;</td>\n",
-       "    </tr>\n",
-       "    \n",
-       "</table>"
-      ],
       "text/plain": [
-       "<ICA | raw data decomposition, method: fastica (fit in 460 iterations on 678572 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
+       "512"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2142,6 +2133,30 @@
     "ica_b\n",
     "\n",
     "os.system(\"say 'I.C.A is finished!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3f7263f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2279,17 +2294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 4]"
+       "[43, 44, 0, 1, 4, 11, 13, 14, 24, 31, 25, 37, 38]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2310,7 +2325,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 3 ICA components\n",
+      "    Zeroing out 13 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2319,10 +2334,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x17e5fad40>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2af4748b0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2348,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -2357,7 +2372,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_01_01/m_01_01_pos1b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_01/m_01_01_pos1b.vhdr\n"
      ]
     },
     {
@@ -2387,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -2395,7 +2410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_01_01\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_01\u001b[0m\n",
       "├── m_01_01_pos1a.eeg\n",
       "├── m_01_01_pos1a.vhdr\n",
       "├── m_01_01_pos1a.vmrk\n",
@@ -2421,7 +2436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
