--- a/ica_notebooks/m_01_02.ipynb
+++ b/ica_notebooks/m_01_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "abc290bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 18:33:17.943415\n"
+      "IMPORTED MODULES today: 2023-07-17 14:37:47.492046\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "061e20c2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8d5439c2",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -396,23 +396,7 @@
       "  [288] Keeping  (2023-04-14 11:13:48.471357+00:00 - 2023-04-14 11:13:48.471357+00:00 -> 767.919 - 767.919)\n",
       "  [289] Keeping  (2023-04-14 11:13:51.511357+00:00 - 2023-04-14 11:13:51.511357+00:00 -> 770.959 - 770.959)\n",
       "  [290] Keeping  (2023-04-14 11:13:51.611357+00:00 - 2023-04-14 11:13:51.611357+00:00 -> 771.059 - 771.059)\n",
-      "  [291] Keeping  (2023-04-14 11:13:53.471357+00:00 - 2023-04-14 11:13:53.471357+00:00 -> 772.919 - 772.919)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [291] Keeping  (2023-04-14 11:13:53.471357+00:00 - 2023-04-14 11:13:53.471357+00:00 -> 772.919 - 772.919)\n",
       "  [292] Keeping  (2023-04-14 11:13:54.971357+00:00 - 2023-04-14 11:13:54.971357+00:00 -> 774.419 - 774.419)\n",
       "  [293] Keeping  (2023-04-14 11:13:58.181357+00:00 - 2023-04-14 11:13:58.181357+00:00 -> 777.629 - 777.629)\n",
       "  [294] Keeping  (2023-04-14 11:13:58.281357+00:00 - 2023-04-14 11:13:58.281357+00:00 -> 777.729 - 777.729)\n",
@@ -526,7 +510,23 @@
       "  [402] Keeping  (2023-04-14 11:16:57.292357+00:00 - 2023-04-14 11:16:57.292357+00:00 -> 956.74 - 956.74)\n",
       "  [403] Keeping  (2023-04-14 11:16:58.792357+00:00 - 2023-04-14 11:16:58.792357+00:00 -> 958.24 - 958.24)\n",
       "  [404] Keeping  (2023-04-14 11:17:02.452357+00:00 - 2023-04-14 11:17:02.452357+00:00 -> 961.9 - 961.9)\n",
-      "  [405] Keeping  (2023-04-14 11:17:02.552357+00:00 - 2023-04-14 11:17:02.552357+00:00 -> 962.0 - 962.0)\n",
+      "  [405] Keeping  (2023-04-14 11:17:02.552357+00:00 - 2023-04-14 11:17:02.552357+00:00 -> 962.0 - 962.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [406] Keeping  (2023-04-14 11:17:03.793357+00:00 - 2023-04-14 11:17:03.793357+00:00 -> 963.241 - 963.241)\n",
       "  [407] Keeping  (2023-04-14 11:17:05.292357+00:00 - 2023-04-14 11:17:05.292357+00:00 -> 964.74 - 964.74)\n",
       "  [408] Keeping  (2023-04-14 11:17:07.982357+00:00 - 2023-04-14 11:17:07.982357+00:00 -> 967.43 - 967.43)\n",
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7fdf55d4",
    "metadata": {},
    "outputs": [
@@ -603,7 +603,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.6s finished\n"
      ]
     }
    ],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "dd900d04",
    "metadata": {
     "scrolled": true
@@ -683,15 +683,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting ICA to data using 63 channels (please be patient, this may take a while)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting ICA to data using 63 channels (please be patient, this may take a while)\n",
       "Selecting by number: 63 components\n",
-      "Fitting ICA took 52.3s.\n"
+      "Fitting ICA took 69.7s.\n"
      ]
     },
     {
@@ -730,7 +724,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 92 iterations on 687607 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,6 +735,30 @@
     "ica.fit(filt_raw_a)\n",
     "os.system(\"say 'I C A is finished!'\")\n",
     "ica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "428bcf73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica.plot_components()"
    ]
   },
   {
@@ -838,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "9644a510",
    "metadata": {},
    "outputs": [
@@ -846,7 +864,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2]\n"
+      "[29, 0, 1, 2, 3, 5, 9, 15, 16, 12, 11, 10]\n"
      ]
     }
    ],
@@ -856,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "fdd3ea51",
    "metadata": {},
    "outputs": [
@@ -866,8 +884,9 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 3 ICA components\n",
+      "    Zeroing out 12 ICA components\n",
       "    Projecting back using 63 PCA components\n",
+      "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
      ]
@@ -875,10 +894,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2f66b1510>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2dd5f36d0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -904,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "f9b0d9bd",
    "metadata": {},
    "outputs": [
@@ -913,9 +932,9 @@
      "output_type": "stream",
      "text": [
       "m_01_02_pos2a.vhdr\n",
-      "/Users/babe/src/gla/dissertation/go/cleaned/m_01_02\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_02\n",
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_01_02/m_01_02_pos2a.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_02/m_01_02_pos2a.vhdr\n"
      ]
     },
     {
@@ -949,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "7a7ebf86",
    "metadata": {},
    "outputs": [
@@ -957,7 +976,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_01_02\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_02\u001b[0m\n",
       "├── m_01_02_pos2a.eeg\n",
       "├── m_01_02_pos2a.vhdr\n",
       "└── m_01_02_pos2a.vmrk\n",
@@ -972,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "7a874b32",
    "metadata": {},
    "outputs": [],
@@ -993,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1027,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
       "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
      ]
     },
@@ -1377,23 +1396,7 @@
       "  [352] Keeping  (2023-04-14 12:11:17.169840+00:00 - 2023-04-14 12:11:17.169840+00:00 -> 682.37 - 682.37)\n",
       "  [353] Keeping  (2023-04-14 12:11:18.230840+00:00 - 2023-04-14 12:11:18.230840+00:00 -> 683.431 - 683.431)\n",
       "  [354] Keeping  (2023-04-14 12:11:19.729840+00:00 - 2023-04-14 12:11:19.729840+00:00 -> 684.93 - 684.93)\n",
-      "  [355] Keeping  (2023-04-14 12:11:23.620840+00:00 - 2023-04-14 12:11:23.620840+00:00 -> 688.821 - 688.821)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:49: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [355] Keeping  (2023-04-14 12:11:23.620840+00:00 - 2023-04-14 12:11:23.620840+00:00 -> 688.821 - 688.821)\n",
       "  [356] Keeping  (2023-04-14 12:11:23.720840+00:00 - 2023-04-14 12:11:23.720840+00:00 -> 688.921 - 688.921)\n",
       "  [357] Keeping  (2023-04-14 12:11:24.740840+00:00 - 2023-04-14 12:11:24.740840+00:00 -> 689.941 - 689.941)\n",
       "  [358] Keeping  (2023-04-14 12:11:26.240840+00:00 - 2023-04-14 12:11:26.240840+00:00 -> 691.441 - 691.441)\n",
@@ -1453,6 +1456,16 @@
       "  [412] Keeping  (2023-04-14 12:13:00.721840+00:00 - 2023-04-14 12:13:00.721840+00:00 -> 785.922 - 785.922)\n",
       "Cropping complete (kept 413)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/ica_notebooks/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
     }
    ],
    "source": [
@@ -1462,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2005,7 +2018,7 @@
       "  [407] Keeping  (2023-04-14 12:12:49.251840+00:00 - 2023-04-14 12:12:49.251840+00:00 -> 774.452 - 774.452)\n",
       "  [408] Keeping  (2023-04-14 12:12:51.226840+00:00 - 2023-04-14 12:12:51.226840+00:00 -> 776.427 - 776.427)\n",
       "Cropping complete (kept 409)\n",
-      "Fitting ICA took 52.8s.\n"
+      "Fitting ICA took 53.3s.\n"
      ]
     },
     {
@@ -2044,7 +2057,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 89 iterations on 690071 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,6 +2068,30 @@
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "os.system(\"say 'I C A is complete!'\")\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6cc50108",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2076,10 +2113,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2a7a60790>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2e37449d0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2087,51 +2124,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "345 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
       "    Using multitaper spectrum estimation with 7 DPSS windows\n",
       "Not setting metadata\n",
       "345 matching events found\n",
@@ -2147,17 +2139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0]"
+       "[0, 5, 6, 8, 9, 13, 10, 17, 19, 56, 29, 28, 30, 26, 2]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2168,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2178,7 +2170,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 1 ICA component\n",
+      "    Zeroing out 15 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2187,10 +2179,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x28f9ef640>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x29314a320>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2216,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -2225,7 +2217,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_01_02/m_01_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_02/m_01_02_pos2b.vhdr\n"
      ]
     },
     {
@@ -2255,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -2263,7 +2255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_01_02\u001b[0m\n",
+      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/ica_notebooks/cleaned/m_01_02\u001b[0m\n",
       "├── m_01_02_pos2a.eeg\n",
       "├── m_01_02_pos2a.vhdr\n",
       "├── m_01_02_pos2a.vmrk\n",
@@ -2289,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
